--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,15 +5,13 @@ body {
     color: $primary-color;
 }
 
-.content {
-    height: 100vh;
-}
 
 .section--title {
     font-size: 1.75rem;
     font-family: 'Izmir-SemiBold';
     position: relative;
     display: inline-block;
+    margin-bottom: 40px;
 
     &::after {
         content: "";
@@ -43,4 +41,192 @@ footer {
     }
 
     padding-block: 14px;
+    margin-top: 15px;
+}
+
+.last-posts {
+
+    .last-post-item {
+        text-decoration: none;
+        padding: 20px;
+        max-height: 400px;
+        user-select: none;
+        width: 100%;
+        color: $primary-color;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+
+
+        &:hover {
+            background-color: darken(#fff, 3%);
+        }
+
+        &:not(:last-child) {
+            margin-right: 14px;
+        }
+
+        .last-post-img {
+            img {
+                object-fit: cover;
+                width: 100%;
+            }
+        }
+
+        .last-post-body {
+            h3 {
+                margin-top: 20px;
+                font-size: 1.25rem;
+                display: -webkit-box;
+                overflow: hidden;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 1;
+                font-family: 'Izmir-Bold';
+            }
+
+            p {
+                margin-bottom: 0px;
+                opacity: .7;
+                display: -webkit-box;
+                overflow: hidden;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 2;
+                margin-bottom: 0;
+            }
+        }
+    }
+
+
+    @media screen and (max-width: 992px) {
+        flex-direction: column;
+
+        .last-post-item {
+            margin-right: 0px;
+
+            &:not(:last-child) {
+                margin-bottom: 20px;
+            }
+        }
+
+
+    }
+}
+
+.posts {
+    .posts-item {
+        display: flex;
+        text-decoration: none;
+        padding: 15px;
+        color: $primary-color;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+
+        &-img {
+            margin-right: 14px;
+
+            img {
+                width: 200px;
+            }
+        }
+
+        &-content {
+            h3 {
+                font-size: 1.25rem;
+                font-family: 'Izmir-Bold';
+            }
+
+            p {
+                margin-bottom: 0px;
+                opacity: .7;
+                font-family: 'Izmir-Medium';
+                display: -webkit-box;
+                overflow: hidden;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 3;
+                margin-bottom: 0;
+            }
+        }
+
+        &:hover {
+            background-color: darken(#fff, 3%);
+        }
+
+        &:not(:last-child) {
+            margin-bottom: 20px;
+        }
+    }
+
+
+    @media screen and (max-width: 992px) {
+        .posts-item {
+            &-img {
+                img {
+                    width: 100%;
+                }
+
+                margin-bottom: 15px;
+            }
+
+            flex-direction: column;
+        }
+    }
+
+
+}
+
+.post {
+    margin-top: 55px;
+
+    &-headline {
+        font-size: 2.25rem;
+        font-family: 'Izmir-ExtraBold';
+        color: $primary-color;
+    }
+
+    &-desc {
+        opacity: .7;
+    }
+
+    &-info {
+        display: inline-block;
+        margin-top: 15px;
+
+        span {
+            padding: 2px 8px;
+            opacity: .6;
+            border-radius: 5px;
+            align-items: center;
+            background: #dddcdc;
+            
+
+            svg {
+                width: 12px;
+                margin-right: 4px;
+            }
+        }
+    }
+
+    &-content {
+        margin-top: 50px;
+    }
+}
+
+.pagination {
+    display: flex;
+    list-style-type: none;
+     
+    
+    &-item {
+        width: 36px;
+        height: 36px;
+        font-size: 1rem;
+        border: 0px;
+        font-family: 'Izmir-Medium';
+        background-color: lighten($primary-color,70%);
+
+        &:disabled{
+            opacity: 0.5;
+        }
+
+        &:not(:last-child) {
+            margin-right: 7px;
+        }
+    }
 }
